--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,13 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+
+ /*// Variables*/
+ @import "base/variables";
+
+ /*// Partials - main css files*/
+ @import "preload";
+ @import "main";
+ /*@import "font-awesome-sprockets";*/
+ /*@import "font-awesome";*/
