--- a/app/assets/stylesheets/preload.scss
+++ b/app/assets/stylesheets/preload.scss
@@ -1,30 +1,23 @@
-/*delete later?!*/
+// /* Header */
+// body.is-preload #menu {
+//   -moz-filter: none;
+//   -webkit-filter: none;
+//   -ms-filter: none;
+//   filter: none;
+// }
 
-/* BG */
-body.is-preload #bg:before {
-  background-color: transparent;
-}
+// body.is-preload #menu > * {
+//   opacity: 1;
+// }
 
-/* Header */
-body.is-preload #header {
-  -moz-filter: none;
-  -webkit-filter: none;
-  -ms-filter: none;
-  filter: none;
-}
+// body.is-preload #menu .content .inner {
+//   max-height: none;
+//   padding: 3rem 2rem;
+//   opacity: 1;
+// }
 
-body.is-preload #header > * {
-  opacity: 1;
-}
-
-body.is-preload #header .content .inner {
-  max-height: none;
-  padding: 3rem 2rem;
-  opacity: 1;
-}
-
-/* Main */
-#main article {
-  opacity: 1;
-  margin: 2rem 0 0 0;
-}
+// /* Main */
+// #main {
+//   opacity: 1;
+//   margin: 2rem 0 0 0;
+// }
