--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,4 @@
 <% page_heading("About") %>
-
 <div id="main">
   <div class="close-btn">
     <%= link_to "", root_path, class:"close" %>
@@ -23,12 +22,19 @@
     <hr>
     <h3>Maggiori informazioni</h3>
     <div class="card">
-      <p>Associazione Progetto Genitori</p>
-      <p>via Soldini 25</p>
-      <p>6830 Chiasso</p>
-      <a href="tel:0041793753791">+41 79 375 37 91<a/>
-      <a href="mailto:info@associazioneprogettogenitori.ch">info@associazioneprogettogenitori.com</a>
-      <a href="https://www.associazioneprogettogenitori.ch">www.associazioneprogettogenitori.com </a>
+      <div class="card-body">
+        <h6 class="card-subtitle mb-2 text-muted">Associazione Progetto Genitori</h6>
+        <div>
+          <p class="card-text">via Soldini 25</p>
+          <p class="card-text">6830 Chiasso</p>
+        </div>
+        <hr class="sm">
+        <div>
+          <a href="tel:0041793753791"> <i class="fas fa-phone-alt"></i> +41 79 375 37 91<a/>
+          <a href="mailto:info@associazioneprogettogenitori.ch"><i class="fas fa-envelope"></i> info@associazioneprogettogenitori.com</a>
+          <a href="https://www.associazioneprogettogenitori.ch"><i class="fas fa-link"></i> www.associazioneprogettogenitori.com </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
