--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
+<%= render 'layouts/quicklinks' %>
 <div id="menu">
-  <%= render 'partials/quicklinks' %>
   <%= render 'partials/logo' %>
   <div class="content">
     <div class="inner">
