--- a/app/views/static_pages/question_1.html.erb
+++ b/app/views/static_pages/question_1.html.erb
@@ -1,5 +1,7 @@
 <% page_heading("First Question") %>
 
+<%= render 'layouts/quicklinks' %>
+
 <div id="menu">
   <%= render 'partials/logo' %>
   <div class="content">
