--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,10 +13,9 @@
  */
 
  /*// Variables*/
-  @import "base/variables";
+  // @import "base/variables";
 
  /*// Partials - main css files*/
- // @import "preload";
-  @import "main";
+  // @import "main";
   // @import "font-awesome-sprockets";
   // @import "font-awesome";
