--- a/app/views/address_categories/index.html.erb
+++ b/app/views/address_categories/index.html.erb
@@ -17,8 +17,14 @@
     <% end %>
   </div>
 
-
-  <h2>Medium Risk</h2>
-  <h2>High Risk</h2>
-
+  <div class="content">
+    <div class="inner">
+      <%= link_to medium_risk_path do %>
+        <h2>Medium Risk</h2>
+      <% end %>
+      <%= link_to medium_risk_path do %>
+        <h2>High Risk</h2>
+      <% end %>
+    </div>
+  </div>
 </div>
