--- a/app/views/partials/_logo.html.erb
+++ b/app/views/partials/_logo.html.erb
@@ -1,5 +1,5 @@
 <div id="logo">
   <%= link_to root_path do %>
-    <img class="logo" src="./assets/logo.png" alt="logo PAT">
+    <%= image_tag("logo.png", alt:"logo PAT", class: "logo") %>
   <% end %>
 </div>
