--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -19,7 +19,7 @@
           <% end %>
         </div>
       <% end %>
-      <%= submit_tag("Continua", class:"btn") %>
+      <%= submit_tag(t("continue"), class:"btn") %>
     <% end %>
    </div>
 </div>
