--- a/app/views/address_categories/medium_risk.html.erb
+++ b/app/views/address_categories/medium_risk.html.erb
@@ -1,4 +1,4 @@
-<% page_heading("Medium Risk") %>
+<% page_heading(t("addresses.medium_risk_title")) %>
 
 <div id="main">
   <div class="close-btn">
