--- a/app/views/address_categories/index.html.erb
+++ b/app/views/address_categories/index.html.erb
@@ -22,7 +22,7 @@
       <%= link_to medium_risk_path do %>
         <h2><%= t("addresses.medium_risk") %></h2>
       <% end %>
-      <%= link_to medium_risk_path do %>
+      <%= link_to high_risk_path do %>
         <h2><%= t("addresses.high_risk") %></h2>
       <% end %>
     </div>
