--- a/app/views/address_categories/medium_risk.html.erb
+++ b/app/views/address_categories/medium_risk.html.erb
@@ -2,7 +2,7 @@
 
 <div id="main">
   <div class="close-btn">
-    <%= link_to "", screening_path, class:"close" %>
+    <%= link_to "", :back, class:"close" %>
   </div>
   <div id="addresses">
     <h2 class="major"><%= t("addresses.medium_risk") %></h2>
