--- a/app/views/address_categories/show.html.erb
+++ b/app/views/address_categories/show.html.erb
@@ -23,13 +23,12 @@
             </div>
             <hr class="sm">
             <div>
-              <a href="tel:<%= address.phone %>"><i class="fas fa-phone-alt"></i> <%= address.phone %></a>
-              <a href="mailto:<%= address.email %>"><i class="fas fa-envelope"></i> <%= address.email %></a>
-              <a href="<%= address.website %>"  target="_blank" ><i class="fas fa-link"></i> www.address.website</a>
+              <a href="tel:<%= address.phone %>"><i class="fas fa-phone-alt"></i><%= address.phone %></a>
+              <a href="mailto:<%= address.email %>"><i class="fas fa-envelope"></i><%= address.email %></a>
+              <a href="<%= address.website %>"  target="_blank" ><i class="fas fa-link"></i><%= address.website %></a>
             </div>
           </div>
         </div>
-        <!-- <hr> -->
       <% end %>
     </div>
   </div>
