--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -9,14 +9,19 @@
     <h3>Fattor di stress per il bambino/a e la sua famiglia</h3>
     <%= form_with url: address_categories_path, local: true do %>
       <% @question_categories.each do |category| %>
-        <div class="">
-          <h4><%= category.name %></h4>
-          <% category.questions.sort_by { |q| q.sort_order }.each do |question| %>
-            <div class="select">
-              <%= check_box_tag "question[#{question.id}]", question.valuation_factor %>
-              <%= label_tag("question[#{question.id}]", question.question_text) %>
-            </div>
-          <% end %>
+        <div class="card">
+          <div class="card-header">
+            <h4><%= category.name %></h4>
+          </div>
+          <div class="card-body">
+            <% category.questions.sort_by { |q| q.sort_order }.each do |question| %>
+              <div class="select">
+                <%= check_box_tag "question[#{question.id}]", question.valuation_factor %>
+                <%= label_tag("question[#{question.id}]", question.question_text) %>
+              </div>
+              <!-- <hr class="sm"> -->
+            <% end %>
+          </div>
         </div>
       <% end %>
       <%= submit_tag(t("continue"), class:"btn") %>
