--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
       <p></p>
     </div>
   </div>
-  <div id="controls">
+  <div id="controls" class="nav">
     <div class="control-link">
       <%= link_to t("home.questionnaire"), question_1_path %>
     </div>
