--- a/app/views/static_pages/question_1.html.erb
+++ b/app/views/static_pages/question_1.html.erb
@@ -6,10 +6,10 @@
   <%= render 'partials/logo' %>
   <div class="content">
     <div class="inner">
-      <h1><%= t("question_1.question") %></h1>
+      <h2><%= t("question_1.question") %></h1>
     </div>
   </div>
-  <div id="controls" class="rating-danger">
+  <div id="controls" class="rating">
     <div class="control-link">
       <%= link_to t("question_1.very_low"), question_2_path(val_1: 1) %>
     </div>
