--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="turbolinks-cache-control" content="no-cache">
     <title><%= page_title %></title>
+    <link rel="manifest" href="/manifest.json">
+    <%= render 'partials/ios_pwa_links' %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#E9EEBD"/>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable"  content="yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="description" content="PAT Parents as Teachers questionnaire">
     <meta name="author" content="Tococorocko - Lucca Kaiser">
-    <%#= favicon_link_tag asset_path('favicon.ico') %>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
