first iteration after feedback

--- a/app/views/address_categories/index.html.erb
+++ b/app/views/address_categories/index.html.erb
@@ -7,6 +7,7 @@
   <div class="content">
     <div class="inner">
       <h1><%= t("addresses.contatti") %></h1>
+      <p>Tutte le famiglie con bambini piccoli e mamme durante la gravidanza hanno la possibilità di accedere a questi servizi per trovare risposte alle loro domande e ricevere informazioni e sostegno.</p>
     </div>
   </div>
   <div id="controls" class="nav">
