--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer id="footer">
   <p class="copyright">&copy; by
-    <%= link_to "Associazione Progetto Genitori", "https://www.associazioneprogettogenitori.com", target: "_blank" %>
+    <%= link_to "PAT Ticino", "https://www.pat-ti.ch", target: "_blank" %>
   </p>
 </footer>
