--- a/app/javascript/stylesheets/main.scss
+++ b/app/javascript/stylesheets/main.scss
@@ -118,6 +118,7 @@ em, i {
 }
 
 p {
+  letter-spacing: 0.6px;
   margin: 0 0 2rem 0;
 }
 
@@ -151,16 +152,13 @@ h2 {
   &.major {
     color: #b7c221;
     border-bottom: solid 1px #b7c221;
-    width: -moz-max-content;
-    width: -webkit-max-content;
-    width: -ms-max-content;
-    width: max-content;
     padding-bottom: 0.5rem;
     margin: 0 0 2rem 0;
   }
 }
 
 h3, h4 {
+  text-transform: uppercase;
   font-size: 1rem;
 }
 h4 {
@@ -181,8 +179,14 @@ button, [type="button"], [type="reset"], [type="submit"] {
     line-height: 1.4;
   }
   h2 {
-    font-size: 1.4em;
+    font-size: 1.4rem;
     line-height: 1.5;
+  }
+  h3 {
+    font-size: 1.3rem;
+  }
+  p {
+    font-size: 1.2rem;
   }
 }
 
@@ -515,8 +519,15 @@ body.preload #menu .content .inner {
   background-color: white;
   border-radius: 4px;
   margin-bottom: 2rem;
+  a {
+    text-decoration: underline dotted;
+    color: #b7c221;
+  }
+  .bold {
+    font-weight: bold;
+  }
   h2 {
-    font-size: 1rem;
+    font-size: 1.4rem;
     letter-spacing: 0.2rem;
   }
   .card {
@@ -550,6 +561,7 @@ body.preload #menu .content .inner {
     label {
       display: inline-block;
       margin-bottom: 0;
+      font-size: 1.1rem;
     }
   }
   .btn {
@@ -657,6 +669,12 @@ a.button {
   transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 1.325s ease-in-out;
 }
 
+#main #about {
+  .citation {
+    font-style: italic;
+  }
+}
+
 #quicklinks {
   position: absolute;
   top: 0;
@@ -665,6 +683,9 @@ a.button {
   padding: 4rem 4rem;
   width: 4rem;
   height: 4rem;
+
+  .dropdown-item {
+  }
 }
 
 /* Footer */
