--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,22 +5,31 @@
   </div>
   <div id="about">
     <h2 class="major"><%= t("about_us.title") %></h2>
-    <h3>Promuovere lo sviluppo dei bambini e sostenerli nelle loro scoperte</h3>
-    <p>Grazie al progetto PAT – Imparo con i genitori vi offriamo la possibilità di essere sostenuti nel percorso di educazione di vostro figlio.</p>
+    <h3>Chi siamo</h3>
+    <p>Parent as Teachers promuove lo sviluppo precoce, l’apprendimento e la salute dei bambini nella prima infanzia sostenendo coinvolgendo i genitori e le persone di riferimento</p>
     <p>I genitori influenzano in maniera importante lo sviluppo e l’apprendimento del proprio bambino. Con l’aiuto del progetto PAT – Imparo con i genitori vi viene offerta l’opportunità di ricevere informazioni e il sostegno necessari per svolgere al meglio il vostro compito.</p>
-    <h3>Chi può partecipare</h3>
-    <p>Donne incinte e genitori il cui figlio non abbia ancora compiuto gli 8 mesi.</p>
-    <p>La partecipazione al progetto avviene su base volontaria ed è gratuita. È possibile terminare anticipatamente il progetto.</p>
-    <h3>Come ci si può annunciare</h3>
-    <ul>
-      <li>presso la sua infermiera consulente materno-pediatrica</li>
-      <li>Compilazione e invio di certificati</li>
-      <li>presso la sua levatrice</li>
-      <li>presso il suo pediatra</li>
-      <li>direttamente presso l’Associazione Progetto Genitori</li>
-    </ul>
     <hr>
-    <h3><%= t("about_us.more_information") %> </h3>
+    <h3>A chi si rivolge il progetto</h3>
+    <p>Si rivolge a donne in gravidanza e famiglie con bambini tra 0 e 6 mesi al momento della segnalazione, con molteplici oneri personali , familiari, sociali o materiali.</p>
+    <p>L’obiettivo è quello di fornire un sostegno precoce alle famiglie con condizioni di partenza difficili.</p>
+    <hr>
+    <h3>Come funziona il PAT</h3>
+    <p>La visita con la consulente PAT di solito avviene ogni 2 settimane ed ha una durata complessiva di circa un’ora, a casa delle famiglie, fino quando il bambino avrà 2 o 3 anni. Inoltre c’è la possibilità di partecipare a degli incontri di gruppo.</p>
+    <p class="bold">Ulteriori informazioni si trova sul sito: <%= link_to "www.pat-ti.ch", "https://www.pat-ti.ch", target: "_blank" %>
+    </p>
+    <hr>
+    <h3>Come si può partecipare al progetto</h3>
+    <p>Tutti possono annunciare, tramite telefono <%= link_to "+41 79 375 37 91", "tel:0041793753791", target: "_blank" %> o scrivendo a <%= link_to "info@pat-ti.ch", "mailto:info@pat-ti.ch", target: "_blank" %>, le famiglie stesse, pediatri, ginecologici, levatrici….</p>
+    <p>È importante che la famiglia sia d’accordo di essere chiamata. Una consulente PAT prenderà contatto con la famiglia, andrà a domicilio a spiegare il progetto. Come famiglia si ha la possibilità di fare delle visite di prova, prima di decidere se partecipare al progetto.</p>
+    <p class="bold">Il progetto è volontario e gratuito per le famiglie.</p>
+    <hr>
+    <h3>Cosa dicono le famiglie di noi</h3>
+    <p class="citation">"Grazie alla mia consulente ho capito tanto di mio figlio, ma soprattutto ho conosciuto molto meglio me stessa…"</p>
+    <p class="citation">"Senza il suo aiuto e supporto avrei punito mio figlio quando non obbediva, non sapevo come gestirlo…"</p>
+    <p class="citation">"Mi ha dato tante idee di gioco, con oggetti di casa, che avrei buttato…"</p>
+    <p class="citation">"Non so se mio figlio fosse ancora con me,…"</p>
+    <p class="citation">"Mi ha aiutato a credere in me stesso…"</p>
+    <hr>
     <div class="card">
       <div class="card-body">
         <h6 class="card-subtitle mb-2 text-muted">Associazione Progetto Genitori</h6>
@@ -30,9 +39,15 @@
         </div>
         <hr class="sm">
         <div>
-          <a href="tel:0041793753791"> <i class="fas fa-phone-alt"></i>+41 79 375 37 91<a/>
-          <a href="mailto:info@associazioneprogettogenitori.ch"><i class="fas fa-envelope"></i>info@associazioneprogettogenitori.com</a>
-          <a href="https://www.associazioneprogettogenitori.ch"><i class="fas fa-link"></i>www.associazioneprogettogenitori.com </a>
+          <%= link_to "tel:0041793753791", target: "_blank" do %>
+            <i class="fas fa-phone-alt"></i>+41 79 375 37 91
+          <% end %>
+          <%= link_to "mailto:info@pat-ti.ch", target: "_blank" do %>
+            <i class="fas fa-envelope"></i>info@pat-ti.ch
+          <% end %>
+          <%= link_to "https://www.pat-ti.ch", target: "_blank" do %>
+            <i class="fas fa-link"></i>www.pat-ti.ch
+          <% end %>
         </div>
       </div>
     </div>
