--- a/app/views/address_categories/medium_risk.html.erb
+++ b/app/views/address_categories/medium_risk.html.erb
@@ -6,27 +6,13 @@
   </div>
   <div id="addresses">
     <h2 class="major"><%= t("addresses.medium_risk") %></h2>
-    <p><%= t("addresses.medium_risk_description") %></p>
-    <% @addresses.each do |address| %>
-      <div class="card">
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted"><%= address.name %></h6>
-          <div>
-            <% if address.extra %>
-              <p class="card-text"><%= address.extra %></p>
-            <% end %>
-            <p class="card-text"><%= address.street %></p>
-            <p class="card-text"><%= address.postcode %> <%= address.city %></p>
-          </div>
-          <hr class="sm">
-          <div>
-            <a href="tel:<%= address.phone %>"><i class="fas fa-phone-alt"></i> <%= address.phone %></a>
-            <a href="mailto:<%= address.email %>"><i class="fas fa-envelope"></i> <%= address.email %></a>
-            <a href="<%= address.website %>"  target="_blank" ><i class="fas fa-link"></i> www.address.website</a>
-          </div>
-        </div>
-      </div>
-    <% end %>
+    <p>Secondo lo screening, questa famiglia può usufruire come tutte le famiglie dei sostegni di base previsti per tutti, ma è auspicabile ampliare la presa a carico con altri servizi di sostegno e aiuto.
+    </p>
+    <p>L’attivazione del progetto PAT, prevede una visita domiciliare per conoscere la famiglia e presentare il progetto. È  possibile effettuare un paio di visite di prova così che la famiglia possa capire di cosa si tratta. Insieme si valuterà e deciderà se proseguire con il progetto PAT oppure coinvolgere altri servizi.</p>
+    <p>Da parte del PAT ci sarà sempre un feedback a chi ha segnalato la famiglia.</p>
+
+    <%= render 'address_categories/medium_risk_addresses' %>
+
   </div>
   <%= link_to t("addresses.all_contacts"), address_categories_path, class:"btn" %>
 </div>
