--- a/app/views/address_categories/high_risk.html.erb
+++ b/app/views/address_categories/high_risk.html.erb
@@ -19,25 +19,25 @@
         <div>
           <p class="card-text">6500 Bellinzona</p>
           <a href="tel:+41 91 814 75 11"><i class="fas fa-phone-alt"></i> +41 91 814 75 11</a>
-          <a href="dss-minorenni.bellinzona@ti.ch"  target="_blank" ><i class="fas fa-link"></i> dss-minorenni.bellinzona@ti.ch</a>
+          <a href="mailto:dss-minorenni.bellinzona@ti.ch"><i class="fas fa-envelope"></i> dss-minorenni.bellinzona@ti.ch</a>
         </div>
         <hr class="sm">
         <div>
           <p class="card-text">6600 Locarno</p>
           <a href="tel:+41 91 816 05 61"><i class="fas fa-phone-alt"></i> +41 91 816 05 61</a>
-          <a href="dss-minorenni.locarno@ti.ch"  target="_blank" ><i class="fas fa-link"></i> dss-minorenni.locarno@ti.ch</a>
+          <a href="mailto:dss-minorenni.locarno@ti.ch"><i class="fas fa-envelope"></i> dss-minorenni.locarno@ti.ch</a>
         </div>
         <hr class="sm">
         <div>
           <p class="card-text">6900 Lugano</p>
           <a href="tel:+41 91 815 75 31"><i class="fas fa-phone-alt"></i> +41 91 815 75 31</a>
-          <a href="dss-minorenni.lugano@ti.ch"  target="_blank" ><i class="fas fa-link"></i> dss-minorenni.lugano@ti.ch</a>
+          <a href="mailto:dss-minorenni.lugano@ti.ch"><i class="fas fa-envelope"></i> dss-minorenni.lugano@ti.ch</a>
         </div>
         <hr class="sm">
         <div>
           <p class="card-text">6950 Mendrisio</p>
           <a href="tel:+41 91 815 94 01"><i class="fas fa-phone-alt"></i> +41 91 815 94 01</a>
-          <a href="dss-minorenni.mendrisio@ti.ch"  target="_blank" ><i class="fas fa-link"></i> dss-minorenni.mendrisio@ti.ch</a>
+          <a href="mailto:dss-minorenni.mendrisio@ti.ch"><i class="fas fa-envelope"></i> dss-minorenni.mendrisio@ti.ch</a>
         </div>
         <hr class="sm">
         <div>
